feat: return updated language collection after bulk edit
